# playWright

./: .editorconfig  .gitignore  .pa11yci.json  ANALYTICS_FILE_STRUCTURE.txt  DASHBOARD_HIERARCHY.txt  Dockerfile.production  FIX_SECRET_SCANNING.md  GIT_PUSH_INSTRUCTIONS.md  README.md  TESTING_GUIDE.md  docker-compose.prod.yml  lighthouse.config.js  nginx.conf  railway.toml  render.yaml  requirements.txt  start.sh  tsconfig.paths.json  vercel.json
.claude/: settings.local.json
.github/: dependabot.yml
backend/: .env.example  EXERCISES_API.md  README.md  package.json  pnpm-lock.yaml  server.js  tsconfig.json
docs/: A11Y_IMPLEMENTATION.md  ACCESSIBILITY_GUIDE.md  ANALYTICS_GUIDE.md  API_REFERENCE.md  AUTH_IMPLEMENTATION.md  BACKUP_RECOVERY.md  COMPLIANCE_GUIDE.md  CONTENT_STUDIO_GUIDE.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_FINAL_STATUS.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_SETUP.md  ENVIRONMENT_VARIABLES.md  EXERCISE_API_IMPLEMENTATION.md  EXERCISE_API_QUICK_REFERENCE.md  EXERCISE_ARCHITECTURE_DIAGRAM.md  EXERCISE_BACKEND_FILES_SUMMARY.md  EXERCISE_BACKEND_IMPLEMENTATION.md  EXERCISE_IMPLEMENTATION_SUMMARY.md  EXERCISE_QUICK_START.md  FAQ.md  FEATURE_IMPLEMENTATION_STATUS.md  FINAL_CONSOLIDATION_PLAN.md  I18N_GUIDE.md  INCIDENT_RESPONSE.md  INSTALLATION.md  KEYBOARD_SHORTCUTS.md  KNOWN_ISSUES.md  MENTORSHIP_PLATFORM_GUIDE.md  MOBILE_DEPLOYMENT.md  MONETIZATION_GUIDE.md  MULTI_TENANCY_GUIDE.md  NOTIFICATION_SYSTEM.md  RBAC_GUIDE.md  (+19 more)
sdks/python/: pyproject.toml
sdks/python/playwright_learning/: __init__.py
(+1228 files in other folders)
