[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-learning-sdk"
version = "1.0.0"
description = "Official Python SDK for the Playwright & Selenium Learning Platform API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Playwright Learning Platform", email = "api@playwright-learning.com"}
]
keywords = ["playwright", "selenium", "learning", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/playwright-learning/api-sdk-python"
Documentation = "https://api.playwright-learning.com/docs"
Repository = "https://github.com/playwright-learning/api-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["playwright_learning*"]
